--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -20,6 +20,22 @@ multiply(a, add(b,b))
 multiply(b, add(a,a))
 ```
 
+### memorize 函数缓存
 
+```javascript
+const memorize = (fn) => {
+  const cache = {}
+  return function(){
+    const arg = JSON.stringify(arguments)
+    cache[arg] = cache[arg] || fn.apply(this,arguments)
+    return cache[arg]
+  }
+}
+// 延迟执行将不纯的函数编程纯函数
+const post = function (url, options) {
+  return () => fetch(url,options)
+}
+memorize(post)
+```
 
 
