--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -38,4 +38,20 @@ const post = function (url, options) {
 memorize(post)
 ```
 
+### curry 科里化 
+
+```javascript
+const curry = function(fn) {
+  let argsCurry = Array.prototype.slice.call(arguments,1)
+  return function(){
+    let args = Array.prototype.slice.call(arguments)
+    let allArgs = args.concat(argsCurry)
+    if(allArgs.length >= fn.length) return fn.apply(this,allArgs)
+    return curry(fn,...allArgs)
+  }
+}
+
+const add = (x,y,z) => x + y + z
+curry(add,1)(2,3)
+```
 
