--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -55,3 +55,32 @@ const add = (x,y,z) => x + y + z
 curry(add,1)(2,3)
 ```
 
+### compose 函数组合
+
+```javascript
+const compose = function () {
+  let fnArgs = Array.prototype.slice.call(arguments)
+  return fnArgs.reduce((prev,next) => (...args) => prev(next(...args)))
+}
+const add = (x,y) => x + y
+const x2 = (x) => x * 2
+const x3 = (x) => x + 3
+compose(x2,x3,add)(2,2) // 14
+compose(x3,x2,add)(2,2) // 11
+
+// 结合律（associativity）
+var associative = compose(f, compose(g, h)) == compose(compose(f, g), h);
+// true
+
+
+
+var loudLastUpper = compose(exclaim, toUpperCase, head, reverse);
+// 或
+var last = compose(head, reverse);
+var loudLastUpper = compose(exclaim, toUpperCase, last);
+// 或
+var last = compose(head, reverse);
+var angry = compose(exclaim, toUpperCase);
+var loudLastUpper = compose(angry, last);
+```
+
