--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -45,7 +45,7 @@ const curry = function(fn) {
   let argsCurry = Array.prototype.slice.call(arguments,1)
   return function(){
     let args = Array.prototype.slice.call(arguments)
-    let allArgs = args.concat(argsCurry)
+    let allArgs = argsCurry.concat(args)
     if(allArgs.length >= fn.length) return fn.apply(this,allArgs)
     return curry(fn,...allArgs)
   }
@@ -84,3 +84,18 @@ var angry = compose(exclaim, toUpperCase);
 var loudLastUpper = compose(angry, last);
 ```
 
+### pointfree 不需要指明参数（依赖）
+
+```javascript
+// 非 pointfree，因为提到了数据：name
+var initials = function (name) {
+  return name.split(' ').map(compose(toUpperCase, head)).join('. ');
+};
+
+// pointfree
+var initials = compose(join('. '), map(compose(toUpperCase, head)), split(' '));
+
+initials("hunter stockton thompson");
+// H. S. T
+
+```
