feat: compose 的 bebug

--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -99,3 +99,17 @@ initials("hunter stockton thompson");
 // H. S. T
 
 ```
+
+### compose 的 debug 调用栈比较深，自己造个中间件
+```javascript
+var trace = curry(function(tag, x){
+  console.log(tag, x);
+  return x;
+});
+
+compose(x3,trace('tracing after:x2,value: '),x2,trace('tracing after:add, value: '),add)(2,2) 
+// tracing after:add, value:  4 
+// tracing after:x2,value:  8
+// 11
+```
+
