feat: unary function

--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -41,6 +41,7 @@ memorize(post)
 ### curry 科里化 
 
 ```javascript
+const slice = (args,index) => Array.prototype.slice.call(args,index)
 const curry = function(fn) {
   let argsCurry = Array.prototype.slice.call(arguments,1)
   return function(){
@@ -50,9 +51,25 @@ const curry = function(fn) {
     return curry(fn,...allArgs)
   }
 }
+// ----------> Ramda 的偏函数
+// Local version of partial application.
+var _ = function(fn) {
+  var arity = fn.length;
+  var f = function(args) {
+    return function () {
+      var newArgs = (args || []).concat(slice(arguments, 0));
+      if (newArgs.length >= arity) {
+        return fn.apply(this, newArgs);
+      }
+      else {return f(newArgs);}
+    };
+  };
+  return f([]);
+};
 
 const add = (x,y,z) => x + y + z
-curry(add,1)(2,3)
+curry(add,1)(2,3) // 6
+_(add)(1)(2)(3) // 6
 ```
 
 ### compose 函数组合
@@ -60,6 +77,8 @@ curry(add,1)(2,3)
 ```javascript
 const compose = function () {
   let fnArgs = Array.prototype.slice.call(arguments)
+  if(fnArgs.length === 0) return x=>x
+  if(fnArgs.length === 1) return fnArgs[0]
   return fnArgs.reduce((prev,next) => (...args) => prev(next(...args)))
 }
 const add = (x,y) => x + y
@@ -113,3 +132,12 @@ compose(x3,trace('tracing after:x2,value: '),x2,trace('tracing after:add, value:
 // 11
 ```
 
+###  unary function 一元函数（只接受一个函数的参数）
+```javascript
+var id = function(x) {return x}
+
+// identity
+compose(id,f) == compose(f,id) == f
+// true
+// 单位元（identity property）
+```
