--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -141,3 +141,23 @@ compose(id,f) == compose(f,id) == f
 // true
 // 单位元（identity property）
 ```
+
+### refactor practice
+```javascript 
+var isLastInStock = function(cars) {
+  var last_car = _.last(cars);
+  return _.prop('in_stock', last_car);
+};
+var isLastInStock = compose(_.prop('in_stock'),_.last)
+
+
+// 使用 _.compose()、_.prop() 和 _.head() 获取第一个 car 的 name
+const map = curry((f,arr) => {
+	return arr.map(f)
+})
+
+const filter = curry((f,arr) => {
+	return arr.filter(f)
+})
+
+var nameOfFirstCar = _.compose(_.prop('name'),_.head)
