--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -161,3 +161,13 @@ const filter = curry((f,arr) => {
 })
 
 var nameOfFirstCar = _.compose(_.prop('name'),_.head)
+
+// ----------
+var _average = function(xs) { return reduce(add, 0, xs) / xs.length; }; // <- 无须改动
+
+var averageDollarValue = function(cars) {
+  var dollar_values = map(function(c) { return c.dollar_value; }, cars);
+  return _average(dollar_values);
+};
+var averageDollarValue = compose(_average,curry(map,function(c) { return c.dollar_value; }))
+
