--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -171,3 +171,11 @@ var averageDollarValue = function(cars) {
 };
 var averageDollarValue = compose(_average,curry(map,function(c) { return c.dollar_value; }))
 
+// ----------
+var _underscore = replace(/\W+/g, '_'); //<-- 无须改动，并在 sanitizeNames 中使用它
+var sanitizeNames = function(arr){
+  return arr.map(a=>a.replace(/\W+/g, '_').toLowerCase())
+}
+
+var sanitizeNames = compose(curry(map,compose(_underscore,toLower))
+// ----------
