--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -160,6 +160,10 @@ const filter = curry((f,arr) => {
 	return arr.filter(f)
 })
 
+const split = curry((reg,arr) => {
+	return arr.split(reg)
+})
+
 var nameOfFirstCar = _.compose(_.prop('name'),_.head)
 
 // ----------
@@ -179,3 +183,16 @@ var sanitizeNames = function(arr){
 
 var sanitizeNames = compose(curry(map,compose(_underscore,toLower))
 // ----------
+
+// 彩蛋 1:
+// ============
+// 使用 compose 重构 availablePrices
+
+var availablePrices = function(cars) {
+  var available_cars = _.filter(_.prop('in_stock'), cars);
+  return available_cars.map(function(x){
+    return accounting.formatMoney(x.dollar_value);
+  }).join(', ');
+};
+
+var availablePrices = compose(curry(join,', '),curry(map,x=>accounting.formatMoney(x.dollar_value)),curry(_.filter,_.prop('in_stock')))
