--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -196,3 +196,16 @@ var availablePrices = function(cars) {
 };
 
 var availablePrices = compose(curry(join,', '),curry(map,x=>accounting.formatMoney(x.dollar_value)),curry(_.filter,_.prop('in_stock')))
+
+// 彩蛋 2:
+// ============
+// 重构使之成为 pointfree 函数。提示：可以使用 _.flip()
+
+var fastestCar = function(cars) {
+  var sorted = _.sortBy(function(car){ return car.horsepower }, cars);
+  var fastest = _.last(sorted);
+  return fastest.name + ' is the fastest';
+};
+
+var fastestCar = compose(x=>x.name + ' is the fastest',_.last,curry(_.sortBy(c=>c.horsepower)))
+```
