--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -209,3 +209,20 @@ var fastestCar = function(cars) {
 
 var fastestCar = compose(x=>x.name + ' is the fastest',_.last,curry(_.sortBy(c=>c.horsepower)))
 ```
+
+### 申明式 与 命令式
+```javascript
+// 命令式
+var makes = []
+for(let i = 0; i < cars.length; i++){
+  makes.push(cars[i].make)
+}
+
+// 申明式
+var makes = cars.map(c=>c.make)
+
+// 命令式
+var authenticate = function(form) {
+  var user = toUser(form);
+  return logIn(user);
+};
