--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -226,3 +226,32 @@ var authenticate = function(form) {
   var user = toUser(form);
   return logIn(user);
 };
+
+// 声明式
+var authenticate = compose(logIn, toUser);
+```
+
+### uncurrying 反科里化
+
+```javascript
+Function.prototype.unCurrying = function(){
+    var self = this;
+    return function(){
+        return Function.prototype.call.apply(self, arguments);
+    }
+}
+
+Function.prototype.unCurrying = function() {
+    var self = this;
+    return function() {
+        var a = arguments;
+        return self.apply(a[0], [].slice.call(a, 1));分割arguments,方便apply传参
+    };
+};
+
+Function.prototype.unCurrying = function () { 
+  return this.call.bind(this);
+};
+
+```
+
