--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -255,3 +255,54 @@ Function.prototype.unCurrying = function () {
 
 ```
 
+
+```javascript
+var curry = function(){
+	var args = [].slice.call(arguments)
+	var fn = args.unshift()
+	return function(){
+		let _args = [].slice.call(arguments);
+		let allArgs = args.concat(_args);
+		if(allArgs.length >= fn.length){
+			return fn.apply(this,allArgs)
+		}else{
+			return curry(fn,...allArgs)
+		}
+	}
+}
+
+var curry2 = function() {
+	var fn = arguments[0]
+	function f(args){
+		return function(){
+			var newArgs = (args || []).concat([].slice.call(arguments))
+			if(newArgs.length >= fn.length){
+				return fn.apply(this,newArgs)
+			} else {
+				return f(newArgs)
+			}
+		}
+	}
+	return f([])
+}
+
+var a = (x,y) => x + y
+
+var trace = curry((tag,x)=>{
+  console.log(tag)
+  return x
+})
+
+var compose = (...fns) => {
+  if(fns.length === 1) return fns[0]
+  return fns.reduce((prev,next)=>(...args)=>(prev(next(...args))))
+}
+
+curry(a,1)
+
+
+
+```
+
+
+
