--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -305,4 +305,28 @@ curry(a,1)
 ```
 
 
+```javascript
+const getProp = curry((property,object)=>object[property])
+// const _getProp = getProp('item')
+// _getProp(obj)
+var trace = curry(function(tag, x){
+  console.log(tag, x);
+  return x;
+});
 
+var query = (keyword) => fetch(`https://api.github.com/search/repositories?q=${keyword}&sort=stars`).then(res=>res.json())
+
+let results = []
+const addDesc = (x,idx)=>{
+  results.push({
+    description: x.description
+  })
+  return x
+}
+const addAvatar = (x,idx) => {
+    results[idx].avatar_url = x.avatar_url
+    results[idx].login = x.login
+  return x
+}
+query('js').then(compose(trace('result:'),map(addAvatar),map(getProp('owner')),map(addDesc),getProp('items')))
+// 貌似结果还比较难懂了... Refactor needed!
