--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -330,3 +330,50 @@ const addAvatar = (x,idx) => {
 }
 query('js').then(compose(trace('result:'),map(addAvatar),map(getProp('owner')),map(addDesc),getProp('items')))
 // 貌似结果还比较难懂了... Refactor needed!
+
+// 康康另外一个例子
+const curry = function(fn) {
+  let argsCurry = Array.prototype.slice.call(arguments,1)
+  return function(){
+    let args = Array.prototype.slice.call(arguments)
+    let allArgs = argsCurry.concat(args)
+    if(allArgs.length >= fn.length) return fn.apply(this,allArgs)
+    return curry(fn,...allArgs)
+  }
+}
+var compose = (...fns) => {
+  if (fns.length === 0) return x=>x
+  if (fns.length === 1) return fns[0]
+  return fns.reduce((prev,next)=>(...args)=>(prev(next(...args))))
+}
+
+var query = (keyword) => fetch(`https://api.github.com/search/repositories?q=${keyword}&sort=stars`).then(res=>res.json())
+var map = curry((f,arr)=>arr.map(f))
+var trace = curry((tag,x)=>{
+  console.log(tag,x)
+  return x
+})
+var getProp = curry((property,object)=>object[property])
+
+
+var Impure = {
+  getResponse: curry((callback,keyword)=>query(keyword).then(callback)),
+  setView: curry((el,html)=>document.querySelector(el).innerHTML = html)
+}
+
+var html = (arr) => 
+`
+<div style="min-width:600px;width:80%;margin:auto">
+${arr.map(src=>`<img style="width:120px;height:120px; border-radius:5px;margin:5px" src="${src}" />`).join('\n')}
+</div>
+`
+
+var getAvatar = compose(getProp('avatar_url'),getProp('owner'))
+var srcs = compose(map(getAvatar),getProp('items'))
+// var srcs = compose(map(getAvatar),trace('after items:'),getProp('items'))
+var renderImages = compose(Impure.setView('body'),html,srcs)
+// var renderImages = compose(trace('setView'),Impure.setView('body'),trace('after html'),html,trace('after getAvatar:'),srcs)
+var app = compose(Impure.getResponse(renderImages))
+app('js')
+
+```
