--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -377,3 +377,25 @@ var app = compose(Impure.getResponse(renderImages))
 app('js')
 
 ```
+
+### 类型签名
+
+```javascript
+// map :: Function -> [any] -> [any]
+var map = curry((f,arr)=>arr.map(f))
+// match :: Regex -> (String -> [String])
+var match = curry(function(reg, s){
+  return s.match(reg);
+});
+
+//  map :: (a -> b) -> [a] -> [b]
+var map = curry(function(f, xs){
+  return xs.map(f);
+});
+
+//  reduce :: (b -> a -> b) -> b -> [a] -> b
+var reduce = curry(function(f, x, xs){
+  return xs.reduce(f, x);
+});
+
+```
