--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -399,3 +399,28 @@ var reduce = curry(function(f, x, xs){
 });
 
 ```
+
+### Container functor
+
+> 能够一直调用map，不改变原来值
+> functor (函子) 是实现了map函数并遵守一些特定规则的容器类型
+
+```javascript
+var Container = function(x){
+  this.__value = x
+}
+Container.of = function(x){
+  return new Container(x)
+}
+Container.of(3) // Container {__value: 3}
+
+// (a->b)->Container a -> Container b
+Container.prototype.map = function(f){
+  return Container.of(f(this.__value))
+}
+Container.of(2)
+.map(function addTwo(x){return x+2})
+.map(x=>x*2)
+
+```
+
