--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -424,3 +424,27 @@ Container.of(2)
 
 ```
 
+###  薛定谔的maybe
+
+```javascript
+var Maybe = function(x){
+  this.__value = x
+}
+
+Maybe.of = function(x){
+  return new Maybe(x)
+}
+
+Maybe.prototype.isNothing = function(){
+  return this.__value === null || this.__value === undefined
+}
+
+Maybe.prototype.map = function(f){
+  return this.isNothing()? Maybe.of(null): Maybe.of(f(this.__value))
+}
+
+Maybe.of('Zkh front end').map(curry((reg,x)=>x.match(reg))(/\s+/g))
+
+Maybe.of({name:'chris'}).map(getProp('name')).map(curry((last,first)=>`${first} ${last}`)('kevin'))//Maybe {__value: "chris kevin"}
+
+```
