--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -448,3 +448,13 @@ Maybe.of('Zkh front end').map(curry((reg,x)=>x.match(reg))(/\s+/g))
 Maybe.of({name:'chris'}).map(getProp('name')).map(curry((last,first)=>`${first} ${last}`)('kevin'))//Maybe {__value: "chris kevin"}
 
 ```
+
+#### 用例
+
+```javascript
+var safeHead = (xs) => Maybe.of(xs[0])
+var streetName = compose(map(getProp('street')),safeHead,getProp('address'))
+streetName({address:[]}) // Maybe {__value: null}
+streetName({address:[{street:'Holmes Stree'}]}) // Maybe {__value: "Holmes Stree"}
+
+```
