--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -458,3 +458,44 @@ streetName({address:[]}) // Maybe {__value: null}
 streetName({address:[{street:'Holmes Stree'}]}) // Maybe {__value: "Holmes Stree"}
 
 ```
+
+### Either 用例
+```javascript
+var Left = function(x){
+  this.__value = x
+}
+Left.of = function(x){
+  return new Left(x)
+}
+Left.prototype.map = function(f){
+  return this
+}
+
+var Right = function(x){
+  this.__value = x
+}
+Right.of = function(x){
+  return new Right(x)
+}
+Right.prototype.map = function(f){
+  return Right.of(f(this.__value))
+}
+// class Right{
+//   constructor(x){
+//     this.__value = x
+//   }
+//   map(f){
+//     return Right.of(f(this.__value))
+//   }
+// }
+
+Right.of('rain').map(str=>'b'+str) //Right{__value: "brain"}
+Left.of('rain').map(str=>'b'+str) //Right{__value: "rain"}
+
+Right.of({host: 'localhost', port: 80}).map(_.prop('host'));
+// Right('localhost')
+
+Left.of("rolls eyes...").map(_.prop("host"));
+// Left('rolls eyes...')
+
+
