--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -498,4 +498,33 @@ Right.of({host: 'localhost', port: 80}).map(_.prop('host'));
 Left.of("rolls eyes...").map(_.prop("host"));
 // Left('rolls eyes...')
 
+// 
+var moment = require('moment');
+
+//  getAge :: Date -> User -> Either(String, Number)
+var getAge = curry(function(now, user) {
+  var birthdate = moment(user.birthdate, 'YYYY-MM-DD');
+  if(!birthdate.isValid()) return Left.of("Birth date could not be parsed");
+  return Right.of(now.diff(birthdate, 'years'));
+});
+
+getAge(moment(), {birthdate: '2005-12-12'});
+// Right(9)
+
+getAge(moment(), {birthdate: 'balloons!'});
+// Left("Birth date could not be parsed")
+
+//  fortune :: Number -> String
+var fortune  = compose(concat("If you survive, you will be "), add(1));
+
+//  zoltar :: User -> Either(String, _)
+var zoltar = compose(map(console.log), map(fortune), getAge(moment()));
+
+zoltar({birthdate: '2005-12-12'});
+// "If you survive, you will be 10"
+// Right(undefined)
+
+zoltar({birthdate: 'balloons!'});
+// Left("Birth date could not be parsed")
+```
 
