--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -527,4 +527,27 @@ zoltar({birthdate: '2005-12-12'});
 zoltar({birthdate: 'balloons!'});
 // Left("Birth date could not be parsed")
 ```
+#### Either
+
+```javascript
+//  either :: (a -> c) -> (b -> c) -> Either a b -> c
+var either = curry(function(f, g, e) {
+  switch(e.constructor) {
+    case Left: return f(e.__value);
+    case Right: return g(e.__value);
+  }
+});
+
+//  zoltar :: User -> _
+var zoltar = compose(console.log, either(id, fortune), getAge(moment()));
+
+zoltar({birthdate: '2005-12-12'});
+// "If you survive, you will be 10"
+// undefined
+
+zoltar({birthdate: 'balloons!'});
+// "Birth date could not be parsed"
+// undefined
+
+```
 
