feat: lazy func

--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -37,6 +37,36 @@ const post = function (url, options) {
 }
 memorize(post)
 ```
+### 惰性加载函数
+
+```javascript
+const addEvent = (function(){
+  if(window.addEventListener){
+    return function(ele,type,handler){
+      ele.addEventListener(type,handler,false)
+    }
+  }
+  if (window.attachEvent){
+    return function(ele,type,handler){
+      ele.attachEvent('on'+type,handler)
+    }
+  }
+})()
+// 上述函数仍然会执行，仍然会有一定的消耗
+const addEvent = function(ele,type, handler) {
+  if (window.addEventListener){
+    addEvent = function(ele,type,handler){
+      return ele.addEventListener(type,handler,false)
+    }
+  } else if (window.attachEvent){
+    addEvent = function(ele,type,handler){
+      return ele.attachEvent('on'+type,handler)
+    }
+  }
+  addEvent(ele,type, handler)
+}
+// 执行一次之后,重写这个函数,之后再进行就跳过if判断
+```
 
 ### curry 科里化 
 
