--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -68,6 +68,24 @@ const addEvent = function(ele,type, handler) {
 // 执行一次之后,重写这个函数,之后再进行就跳过if判断
 ```
 
+### throttle debounce 函数防抖、节流
+
+```javascript
+const throttle = (fn, delay = 2000) => {
+  let timer = null
+  return function(){
+    if (timer) return
+    timer = setTimeout(()=>{
+      fn()
+      timer = null
+    },delay)
+  }
+}
+
+window.onresize = throttle(()=>{
+  console.log('onresize throttled...')
+})
+
 ### curry 科里化 
 
 ```javascript
