--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -86,6 +86,23 @@ window.onresize = throttle(()=>{
   console.log('onresize throttled...')
 })
 
+const debounce = (fn, delay = 800) => {
+  let timer = null
+  return function(){
+    if (timer) clearTimeout(timer)
+    timer = setTimeout(()=>{
+      fn()
+      timer = null
+    },delay)
+  }
+}
+window.onresize = debounce(()=>{
+  console.log('onresize debounced...')
+})
+```
+
+
+
 ### curry 科里化 
 
 ```javascript
