--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -102,6 +102,35 @@ window.onresize = debounce(()=>{
 ```
 
 
+### timeChunk 分时函数
+
+```javascript
+
+const timeChunk = (tasks,fn,count) => {
+  tasks = tasks.slice()
+  let timer = null
+  const start = () => {
+    for(let i = 0 ; i < count; i++){
+      const task = tasks.shift()
+      fn(task)
+    }
+  }
+  return function(){
+    timer = setInterval(() => {
+      if (tasks.length <= count) {
+        clearInterval(timer)
+      }
+      start()
+    }, 200)
+  }
+}
+
+const tasks = [1,2,3,4,5,6,7,8,9,10]
+timeChunk(tasks, (e)=>console.log(e), 3)
+()
+
+```
+
 
 ### curry 科里化 
 
