--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -1,5 +1,11 @@
 # 柯南菌函数式编程指南
 
+```JavaScript
+const flatten = (array) => [].concat(...array.map(v => Array.isArray(v) ? flatten(v): v))
+const tmpArray = [1,2,[3],[4,[5]]]
+flatten(tmpArray)
+// [1, 2, 3, 4, 5, 6]
+```
 
 ```javascript
 const a = 1,
