feat: read deep

--- a/柯南菌函数式编程指南.md
+++ b/柯南菌函数式编程指南.md
@@ -6,6 +6,31 @@ const tmpArray = [1,2,[3],[4,[5]]]
 flatten(tmpArray)
 // [1, 2, 3, 4, 5, 6]
 ```
+```JavaScript
+const readObjProps = (obj,...props) => {
+  let ret = undefined
+  try {
+    if (props.length === 1 && props[0].indexOf('.') !== -1) {
+      props = props[0].split('.')
+    }
+    props.forEach(prop => {
+      if(!ret) ret = obj[prop]
+      else ret = ret[prop]
+    })
+  } catch (err) {}
+  return ret
+}
+const a = {
+  b: {
+    c: {
+      d: [1,2,3]
+    }
+  }
+}
+readObjProps(a, 'b', 'c', 'd')
+readObjProps(a, 'b.c.d')
+// [1, 2, 3]
+```
 
 ```javascript
 const a = 1,
